# boilerplate

./: LICENSE  README.md
c-cpp/: README.md
c-cpp/new-project/: CMakeLists.txt  Justfile  README.md
c-cpp/new-project/src/: main.cpp
c-cpp/sfml-fonts/: README.md  fonts.cpp  fonts.hpp
